[package]
name = "polarstest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
polars = { version="0.25.1", features = ["lazy", "csv-file", ]}
reqwest = { version="0.11.12",  features = ["blocking"]}
